# archive-version-patcher

./: Cargo.toml  README.md  build.rs
assets/test_archives/backup/: fo4_og.ba2
config/: avp_config.toml
src/: avp.rs  avp_config.rs  avp_data.rs  avplang.rs  main.rs  translate.json
src/test_archives/backup/: fo4_ng.ba2
