[package]
name = "archive-version-patcher"
version = "0.1.0"
edition = "2021"
authors = ["bp42s"]
description = "Tool to patch ba2 archive versions for Fallout 4"
repository = "https://github.com/bransonflynn/archive-version-patcher"
documentation = "https://github.com/bransonflynn/archive-version-patcher"
license = "MIT"


[dependencies]
anyhow = "1.0.92"
ba2 = "3.0.0"
clap = { version = "4.5.20", features = ["derive"] }
eframe = "0.29.1"
egui = "0.29.1"
serde = "1.0.214"
serde_derive = "1.0.214"
toml = "0.8.19"

[build-dependencies]
winresource = "0.1.17"
